Add single access request endpoint
